[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bimap = "0.6.3"
bitvec = "1.0.1"
factor = "0.4.0"
fancy-regex = "0.12.0"
fn-cache = "1.1.1"
glob = "0.3.1"
heck = "0.4.1"
indexmap = { version = "2.1.0", features = ["rayon"] }
itertools = "0.12.0"
maplit = "1.0.2"
memoize = "0.4.1"
num = "0.4.1"
num-complex = "0.4.4"
num-rational = "0.4.1"
ordered-multimap = "0.7.1"
petgraph = "0.6.4"
predicates = "3.0.4"
rangemap = "1.4.0"
rayon = "1.8.0"
regex = "1.10.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.108"
strsim = "0.10.0"
trie-rs = "0.1.1"
